--- a/src/frontend/src/components/styles/MatchDetailCard.scss
+++ b/src/frontend/src/components/styles/MatchDetailCard.scss
@@ -1,3 +1,22 @@
 .MatchDetailCard {
-  
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 10px;
+  margin-bottom: 20px;
+
+  .match-date,
+  .match-venue,
+  .match-result {
+    margin-top: 10px;
+  }
+  .vs {
+    font-size: 40px;
+  }
+
+  .additional-detail {
+    text-align: right;
+    & > p {
+      margin-bottom: 20px;
+    }
+  }
 }
