--- a/src/frontend/src/components/styles/MatchSmallCard.scss
+++ b/src/frontend/src/components/styles/MatchSmallCard.scss
@@ -1,12 +1,8 @@
+.MatchSmallCard {
 
-.MatchDetailCard {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   padding: 10px;
   margin-bottom: 20px;
 
-  .match-date,
-  .match-venue,
   .match-result {
     margin-top: 10px;
   }
@@ -21,8 +17,10 @@
     }
   }
   h1 {
+
     &:hover {
       font-size: 60px;
     }
+
   }
 }
