--- a/src/frontend/src/pages/styles/TeamPage.scss
+++ b/src/frontend/src/pages/styles/TeamPage.scss
@@ -3,7 +3,7 @@
 .TeamPage {
   display: grid;
 
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 0.5fr 1fr 1fr ; 
 
   grid-column-gap: 10px;
@@ -76,5 +76,14 @@
       transform: rotate(-180deg);
     }
     @include transition-ease;
+  }
+
+  .more-link {
+    align-self: center;
+    justify-self: center;
+    font-size: 2.5rem;
+    &:hover {
+      font-size: 3.5rem;
+    }
   }
 }
