--- a/src/frontend/src/pages/styles/TeamPage.scss
+++ b/src/frontend/src/pages/styles/TeamPage.scss
@@ -3,7 +3,7 @@
 .TeamPage {
   display: grid;
 
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 0.5fr;
   grid-template-rows: 0.5fr 1fr 1fr ; 
 
   grid-column-gap: 10px;
@@ -21,7 +21,7 @@
   }
 
   .match-detail-section {
-    grid-column: span 4;
+    grid-column: span 5;
     .words {
       span {
         font-size: 2rem;
@@ -80,9 +80,10 @@
   .more-link {
     align-self: center;
     justify-self: center;
-    font-size: 2.5rem;
+    font-size: 3.5rem;
+    grid-column: span 2;
     &:hover {
-      font-size: 3.5rem;
+      font-size: 4.5rem;
     }
   }
 }
